<resources>
    <string name="app_name">sooka</string>
    <string name="title_home">Home</string>
    <string name="live_tv">Live TV</string>
    <string name="title_video">Video</string>
    <string name="live_viu_tab">sooka Apps</string>
    <string name="title_more">More</string>
    <string name="logout_success">Logout Successful!</string>
    <string name="no_internet_title">You are offline. Check your internet connection</string>
    <string name="no_internet">Your network seems too slow to reach \n our server</string>
    <string name="payment_progress">Payment in Progress</string>
    <string name="already_purchase">You Already Purchased This Offer</string>
    <string name="payment_progress_desc">You currently have a pending transaction. You may retry later after the pending transaction is completed.</string>
    <string name="already_purchase_desc">Try to refresh the screen or reopen the app to reflect your purchases. Please contact us if issue persist.</string>
    <string name="save_video_to">Save video to...</string>
    <string name="new_playlist">New Playlist</string>
    <string name="done">Done</string>
    <string name="mobile_error">Mobile number is 11-12 numerical values, without \nspacing &amp; hyphen</string>
    <string name="email_mobile_error">Please enter a valid email address or mobile number.</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="valid_password">Please enter valid password</string>
    <string name="no_data_sponsor">Nothing here for now. \n You can still browse our other \n contents</string>
    <string name="password_error">Password must be 8-16 characters, at least 1 number, 1 lowercase letter &amp; 1 uppercase letter.</string>
    <string name="title">Title</string>
    <string name="high">High (720p)</string>
    <string name="medium">Medium (360p)</string>
    <string name="low">Low (180p)</string>
    <string name="season">Season </string>
    <string name="clips">Clips </string>
    <string name="follow"><b>Follow </b></string>
    <string name="following">Following</string>
    <string name="Email">Email</string>
    <string name="email_updated">Email Updated!</string>
    <string name="email_updated_failed">Email Update Failed!</string>
    <string name="email_updated_failed_desc">Unable to update new Email. Kindly reach out to support if you need further assistance.</string>
    <string name="mobile_updated">Mobile Number Updated!</string>
    <string name="mobile_updated_failed">Mobile Number Update Failed!</string>
    <string name="mobile_updated_description_failed">Unable to update new Mobile Number. Kindly reach out to us for further assistance.</string>
    <string name="unlink_desc">With a linked account, you can log in faster.</string>
    <string name="mobile_updated_description">New Mobile Number updated successfully. You may use this for future login with password.</string>
    <string name="email_updated_Description">New Email updated successfully. You may use this for future login with password.</string>
    <string name="sms">SMS</string>
    <string name="push">Push</string>
    <string name="unlink_from">Unlink from</string>
    <string name="create_playlist_name_title">Create a playlist name</string>
    <string name="epg_data_not_available">There is no EPG available for selected date</string>
    <string name="epg_information_not_available">Sorry, program information is currently unavailable.</string>
    <string name="logged_out_message">You are logged out from the application, as your device is deleted. \n Please login again</string>
    <string name="removed_from_followlist">You have unfollowed this drama</string>
    <string name="removed_from_creator_followlist">You have unfollowed this user successfully</string>
    <string name="removed_from_creator_follow">You have unfollowed</string>
    <string name="successfully">successfully</string>
    <string name="added_to_followlist">You are now following this drama</string>
    <string name="already_added_in_follow">You are already following this drama</string>
    <string name="already_remove_follow">You are not following this drama</string>
    <string name="no_video_available">Oops! Seems like there\'s no video quality available</string>
    <string name="no_tracks_available">Sorry, there\'s no audio tracks available</string>
    <string name="no_caption_available">Sorry, there\'s no subtitles and audio tracks available</string>
    <string name="no_result_found">No Results Found</string>
    <string name="FOR_PURCHASE_SUBSCRIPTION_ONLY">SUBSCRIPTION_PURCHASED</string>
    <string name="FOR_PURCHASED">FOR_PURCHASE_SUBSCRIPTION_ONLY</string>
    <string name="FREE">Free</string>
    <string name="now_playing">Now Playing</string>
    <string name="more_like_this"> More Like This </string>
    <string name="related">Related</string>
    <string name="episode_title">Episode</string>
    <string name="shows">Shows</string>
    <string name="term_policy_new">By clicking Sign Up or any of the Social Login above, you agree to</string>
    <string name="term_policy_login">By clicking Log In or any of the Social Login above, you agree to</string>
    <string name="unable_link_social">Unable to link this social account. Kindly reach out to us for further assistance.</string>
    <string name="trailer_more">Trailers &amp; More</string>
    <string name="trailer_title">Trailers</string>
    <string name="highlights">Highlights</string>
    <string name="schedule">Schedule</string>
    <string name="no_device_found">No device found</string>
    <string name="remove_device">Do you really want to remove this device?</string>
    <string name="deviceconfirmation">5 Devices already added !</string>
    <string name="notification_message">No new notifications</string>
    <string name="remove_watchlist_item">Do you want to remove this video from your playlist?</string>
    <string name="search_dialog">Search sooka</string>
    <string name="geo_location_dialouge">Uh-no! Looks like you are not in Malaysia at the moment. You may still browse around to checkout our contents. Come back soon to enjoy your favourite shows and movies!</string>
    <string name="purchase_dialouge">Please login to view this content.</string>
    <string name="live_tag">LIVE</string>
    <string name="you_may_like">You may also like</string>
    <string name="similar_movie">Similar Movies</string>
    <string name="watchlist"><b>Watchlist </b></string>
    <string name="playlist">Playlist</string>
    <string name="download">Download</string>
    <string name="share"><b>Share </b></string>
    <string name="remind_me">Remind Me</string>
    <string name="play_now">Play Now</string>
    <string name="my_list">My List</string>
    <string name="no_connection">No Connection</string>
    <string name="more">More</string>
    <string name="view_more"><u>View More</u></string>
    <string name="view_less"><u>View Less</u></string>
    <string name="upgrade_success">Upgrade successful!</string>
    <string name="subscribed_success">Payment successful! Enjoy the show!</string>
    <string name="downgrade_success">Downgrade request will be reflected next renewal cycle.</string>
    <string name="pending_payment">Payment Pending</string>
    <string name="pending_payment_desc">Please check back later in Transaction History at Profile page and/or check with your payment provider.</string>
    <string name="less">Less</string>
    <string name="live">Live Now</string>
    <string name="login_successfull"> Login Successful!</string>
    <string name="similar_channel">Similar Channel</string>
    <string name="title_exclusives">Exclusive</string>
    <string name="live_event_msg">We know you are excited! Set a reminder and come back later when the event starts. See you!</string>
    <string name="actors">Actors: </string>
    <string name="sub_title">Subtitle Language: </string>
    <string name="duration">Content Duration: </string>
    <string name="directors">Director/Producer: </string>
    <string name="email_unavailable">Sorry, cannot proceed without contact info!</string>
    <string name="show_all"><u>See More</u></string>
    <string name="title_creators">Creators</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="delete_confirmation">Are you sure you want to delete the search history?</string>
    <string name="all_logout">All Logout</string>
    <string name="device_logout">Do you really want to logout from all devices?</string>
    <string name="popular_search">Popular Searches</string>
    <string name="recent_searches">Search History</string>
    <string name="removed_from_watchlist">removed from your My List</string>
    <string name="playlist_removed">Video removed from your playlist</string>
    <string name="checkout">Watch</string>
    <string name="on_Dialog">on sooka!</string>
    <string name="added_to_watchlist">added to your My List</string>
    <string name="password_updated">Password Updated!</string>
    <string name="maxed_out_title">Verification Code Resend Maxed Out!</string>
    <string name="become_vip">Become a VIP</string>
    <string name="buy">Buy</string>
    <string name="buy_from">Buy From </string>
    <string name="subscription_upgrade">Subscription Upgrade</string>
    <string name="subscription_downgrade">Subscription Downgrade</string>
    <string name="device_Removed">Device Removed</string>
    <string name="rent_movie">Rent Movie For RM XX.XX</string>
    <string name="rooted_failure_msg">Tsk tsk tsk…you cannot run this app on jailbreak or rooted devices!</string>
    <string name="watch_now">Watch Now</string>
    <string name="resume">Resume</string>
    <string name="yes">Yes !</string>
    <string name="ok">Ok</string>
    <string name="ok_double_exlamation">OK!!</string>
    <string name="ok_single_exlamation">OK!</string>
    <string name="no">No</string>
    <string name="ok_with_exlamation">Ok!!</string>
    <string name="sad_to_see">Sad to See You Go</string>
    <string name="cancel_description">But goodbyes are not forever. You can \n always re-subscribe again! \n Your current subscription is valid until</string>
    <string name="video_quality">Video quality</string>
    <string name="subtitle">Subtitle</string>
    <string name="audio">Audio</string>
    <string name="cancel">Cancel</string>
    <string name="oops_not_connected">Oops! You\'re not connected</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="no_data">No results found.</string>
    <string name="continue_text">Continue</string>
    <string name="subscribe__dialog_description">Subscribe now to unlock this title!</string>
    <string name="login">Log In</string>
    <string name="not_yet">Not Yet!</string>
    <string name="sorry_have_to_go">Sorry, I have to go...</string>
    <string name="no_connection_image">No Connection Image</string>
    <string name="no_data_found">No Results Found</string>
    <string name="YES">Yes</string>
    <string name="subscribe_more">Subscribe</string>
    <string name="profile_txt">Profile</string>
    <string name="live_home">Live TV</string>
    <string name="unlock_your_membership">Unlock Your Membership</string>
    <string name="unlock_your_membership_para">Lorem ipsum dolor sit amet, consetetur \n sadipscing elitr, sed diam nonumy eirmod \n tempor invidunt ut labore et dolore magna</string>
    <string name="get_access_to_vip"><![CDATA[Get access to VIP Sports + \n Entertainment (VOD & Live TV)]]></string>
    <string name="registered_devices">Entitled to 5 Registered Devices</string>
    <string name="concurrency">1 Playback Concurrency across devices</string>
    <string name="noAds">No Ads</string>
    <string name="contentDescription">ContentDescription</string>
    <string name="are_you_sure_remove_reminder">Are you sure you want to remove the reminder?</string>
</resources>