<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:id="@+id/rl_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackColor"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/no_connection_image"
            android:contentDescription="@string/no_connection_image" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/oops_not_connected"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/no_internet_title"
            android:textColor="#adadad"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/try_again"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />


    </LinearLayout>

</layout>