<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"

        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home_24_px"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_live_tv"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_live_tv_24_px"
        android:title="@string/live_home" />

   <!-- <item
        android:id="@+id/navigation_video"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/nav_video"
        android:title="@string/title_video" />
    <item
        android:id="@+id/navigation_viu_apps"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/nav_viu"
        android:title="@string/live_viu_tab" />-->


    <item
        android:id="@+id/navigation_more"
        android:enabled="true"
        android:icon="@drawable/ic_person_24_px"
        android:title="@string/profile_txt"
        app:showAsAction="ifRoom" />

</menu>
