<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/fragment_background_color">

    <TextView
        android:id="@+id/quality"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/video_quality"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/caption"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/subtitle"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:layout_marginRight="25dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/audio"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/audio"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:layout_marginRight="25dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:layout_marginRight="25dp"
        android:textSize="15sp" />


</LinearLayout>