<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/grape_purple"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/nodatafound"
            android:contentDescription="@string/no_data_found" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/retry_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:text="@string/try_again"
            android:textColor="@color/primary_blue"
            android:textSize="@dimen/font_medium_large" />


    </LinearLayout>

</layout>