<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg"
    tools:context=".fragments.subscription.ui.SubscriptionLandingFragment">


    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/astro_white"
        android:id="@+id/astro_logo"
        android:layout_marginStart="@dimen/dimen16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/astro_logo"
    android:id="@+id/rl1"
    android:layout_marginStart="@dimen/dimen16dp"
    android:layout_marginTop="@dimen/margin65dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt24sp"
        android:textColor="@color/white"
        android:id="@+id/unlock_your_membership"
        android:text="@string/unlock_your_membership"
        android:fontFamily="@font/heebo_medium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sp"
        android:textColor="@color/white"
        android:id="@+id/para"
        android:layout_marginEnd="@dimen/dimen16dp"
        android:layout_marginTop="@dimen/dimen8dp"
        android:layout_below="@id/unlock_your_membership"
        android:text="@string/unlock_your_membership_para"
        android:fontFamily="@font/heebo_regular"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sp"
        android:textColor="@color/white"
        android:id="@+id/get_access"
        android:layout_marginEnd="@dimen/dimen16dp"
        android:layout_marginTop="@dimen/dimen24dp"
        android:layout_below="@id/para"
        android:drawablePadding="@dimen/dimen16dp"
        android:drawableLeft="@drawable/baseline_subscriptions_24px"
        android:text="@string/get_access_to_vip"
        android:fontFamily="@font/heebo_regular"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sp"
        android:id="@+id/registered_devices"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/dimen16dp"
        android:layout_marginTop="@dimen/dimen24dp"
        android:layout_below="@id/get_access"
        android:drawablePadding="@dimen/dimen16dp"
        android:drawableLeft="@drawable/ic_baseline_laptop_24"
        android:text="@string/registered_devices"
        android:fontFamily="@font/heebo_regular"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sp"
        android:id="@+id/concurrency"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/dimen16dp"
        android:layout_marginTop="@dimen/dimen24dp"
        android:layout_below="@id/registered_devices"
        android:drawablePadding="@dimen/dimen16dp"
        android:drawableLeft="@drawable/ic_android_24px"
        android:text="@string/concurrency"
        android:fontFamily="@font/heebo_regular"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sp"
        android:id="@+id/noAds"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/dimen16dp"
        android:layout_marginTop="@dimen/dimen24dp"
        android:layout_below="@id/concurrency"
        android:drawablePadding="@dimen/dimen16dp"
        android:drawableLeft="@drawable/tick"
        android:text="@string/noAds"
        android:fontFamily="@font/heebo_regular"/>

</RelativeLayout>
    <TextView
        android:id="@+id/continue_btn"
        android:layout_width="@dimen/button_width_328dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_top_32dp"
        android:layout_marginEnd="@dimen/dimen16dp"
        android:layout_marginStart="@dimen/dimen16dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/heebo_medium"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_below="@id/rl1"
        android:text="@string/continue_text"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"/>
</RelativeLayout>
</layout>