<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:background="@color/grape_purple">

    <ImageView
        android:id="@+id/close_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/ic_baseline_clear_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/heebo_medium"
        android:lineHeight="35sp"
        android:paddingLeft="38dp"
        android:paddingRight="38dp"
        android:text="@string/become_vip"
        android:textColor="@color/title_color"
        android:textSize="@dimen/font_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/heebo_medium"
        android:gravity="center"
        android:lineHeight="20sp"
        android:paddingLeft="38dp"
        android:paddingRight="38dp"
        android:text="@string/subscribe__dialog_description"
        android:textColor="@color/title_color"
        android:textSize="@dimen/font_medium_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/heebo_medium"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />
    <TextView
        android:id="@+id/subscribe"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/heebo_medium"
        android:gravity="center"
        android:text="@string/subscribe_more"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>