<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/grape_purple"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grape_purple">

        <ImageView
            android:visibility="gone"
            android:id="@+id/close_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/ic_baseline_clear_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/heebo_medium"
            android:lineHeight="35sp"
            android:paddingLeft="38dp"
            android:paddingRight="38dp"
            android:text="@string/become_vip"
            android:textColor="@color/title_color"
            android:textSize="@dimen/font_large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reminder_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/heebo_medium"
            android:gravity="center"
            android:lineHeight="20sp"
            android:paddingLeft="38dp"
            android:paddingRight="38dp"
            android:text="@string/are_you_sure_remove_reminder"
            android:textColor="@color/title_color"
            android:textSize="@dimen/font_medium_large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient_button"
            android:fontFamily="@font/heebo_medium"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/title_color"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminder_description" />

        <TextView
            android:id="@+id/noBtn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/gradient_without_corner"
            android:fontFamily="@font/heebo_medium"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/title_color"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/yesBtn"
            app:layout_constraintHorizontal_chainStyle="spread" />

        <TextView
            android:id="@+id/yesBtn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/gradient_without_corner"
            android:fontFamily="@font/heebo_medium"
            android:gravity="center"
            android:text="@string/YES"
            android:textColor="@color/title_color"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintLeft_toRightOf="@+id/noBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>