<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="38dp"
    android:paddingLeft="38dp"
    android:paddingBottom="16dp"
    android:background="@color/grape_purple">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/heebo_medium"
        android:lineHeight="35sp"
        android:text="@string/sad_to_see"
        android:textColor="@color/aqua_marine"
        android:textSize="@dimen/font_xxlarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/heebo_medium"
        android:gravity="center"
        android:lineHeight="20sp"
        android:text="@string/cancel_description"
        android:textColor="@color/title_color"
        android:textSize="@dimen/font_medium_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"></TextView>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_medium"
        android:gravity="center"
        android:lineHeight="20sp"
        android:text="28/03/2021"
        android:textColor="@color/cancel_red_color"
        android:textSize="@dimen/font_medium_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"></TextView>


    <TextView
        android:id="@+id/not_yet"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/heebo_medium"
        android:gravity="center"
        android:text="@string/not_yet"
        android:textAllCaps="true"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"></TextView>


    <TextView
        android:id="@+id/sorry"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/white_outline_button"
        android:fontFamily="@font/heebo_medium"
        android:gravity="center"
        android:text="@string/sorry_have_to_go"
        android:textAllCaps="true"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/not_yet"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>